--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -400,7 +400,7 @@
         <div id="side-nav-button-icon" class="expand">V</div>
     </div>
     <div id="side-nav-panel">
-        <div id="myDashboard" class="side-nav-item">
+        <!--<div id="myDashboard" class="side-nav-item">
             <div class="side-nav-item-inner-wrapper">
                 <div class="side-nav-item-icon">
                     <div class="glyphicon glyphicon-home"></div>
@@ -415,7 +415,7 @@
                 </div>
                 <div class="side-nav-item-text">Daily Activities</div>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 <div class="container">
@@ -856,29 +856,56 @@
 
         var groupData = [
             {
-                "groupHeaderData": [{
-                    "navGroupHeaderText": "Group 1"
-                }],
                 "sideNavItemData": [
                     {
-                        "navItemId": "myDashboard",
-                        "navItemText": "My Dashboard"
+                        "navItemId": "dashboard",
+                        "navItemText": "Dashboard"
                     },
                     {
                         "navItemId": "dailyActivities",
                         "navItemText": "Daily Activities"
+                    },
+                    {
+                        "navItemId": "events",
+                        "navItemText": "Events"
+                    },
+                    {
+                        "navItemId": "holidays",
+                        "navItemText": "Holidays"
+                    },
+                ]
+            },
+            {
+                "groupHeaderData": [{
+                    "navGroupHeaderText": "Contacts"
+                }],
+                "sideNavItemData": [
+                    {
+                        "navItemId": "contacts",
+                        "navItemText": "Contacts"
+                    },
+                    {
+                        "navItemId": "socialNetworks",
+                        "navItemText": "Social Networks"
+                    },
+                    {
+                        "navItemId": "addressBook",
+                        "navItemText": "Address Book"
                     }
                 ]
             },
             {
+                "groupHeaderData": [{
+                    "navGroupHeaderText": "Media Manager"
+                }],
                 "sideNavItemData": [
                     {
-                        "navItemId": "myDashboard",
-                        "navItemText": "My Dashboard"
+                        "navItemId": "videos",
+                        "navItemText": "Videos"
                     },
                     {
-                        "navItemId": "dailyActivities",
-                        "navItemText": "Daily Activities"
+                        "navItemId": "music",
+                        "navItemText": "Music"
                     }
                 ]
             }
@@ -901,17 +928,14 @@
         //    }
         //];
 
+        // Intentionally make the group header null to test this scenario
+        //groupData.groupHeaderData = null;
+        //renderSideNavGroup(groupData);
+
         $.each(groupData, function (index, data) {
             /* Render each side nav group onto the Side Panel Div */
             renderSideNavGroup(data);
         });
-        
-
-        /* Intentionally make the group header null to test this scenario */
-        //groupData.groupHeaderData = null;
-
-        //renderSideNavGroup(groupData);
-
     }
 
     /* Render side nav items on Side Nav Panel */
