--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -135,6 +135,7 @@
         margin-top: 10px;
         margin-left: 10px;
         font-size: 20px;
+        display: none;
     }
 
     #chatSectionBody {
@@ -142,6 +143,7 @@
         margin-left: 20px;
         font-size: 18px;
         height: 242px;
+        display: none;
     }
 
     .chatSectionConversation {
@@ -153,6 +155,7 @@
         position: absolute;
         width: 290px;
         height: 105px;
+        bottom: 30px;
         background-color: chartreuse;
         /* Keep it invisible by default */
         display: none;
