Commit #144: Add Career Manager Group to Nav Group Data

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -701,6 +701,25 @@
             },
             {
                 "groupHeaderData": [{
+                    "navGroupHeaderText": "Career Manager"
+                }],
+                "sideNavItemData": [
+                    {
+                        "navItemId": "profiles",
+                        "navItemText": "Profiles"
+                    },
+                    {
+                        "navItemId": "projects",
+                        "navItemText": "Projects"
+                    },
+                    {
+                        "navItemId": "skills",
+                        "navItemText": "Skills"
+                    }
+                ]
+            },
+            {
+                "groupHeaderData": [{
                     "navGroupHeaderText": "Media Manager"
                 }],
                 "sideNavItemData": [
