--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -884,39 +884,43 @@
         //});
     }
 
-    /* Click Handler for Previous Date Arrow */
-    $("#previousDateArrow").on("click", function () {
+    /* Initialize the Current Date Arrows */
+    var initializeCurrentDateArrows = function () {
 
-        /* Save the Canvas Tile Data for the given date */
-        saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
+        /* Click Handler for Previous Date Arrow */
+        $("#previousDateArrow").on("click", function () {
 
-        /* Clear out the existing canvasTileData */
-        clearOutCanvasTileData();
+            /* Save the Canvas Tile Data for the given date */
+            saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
 
-        /* Subtract one day from the current date */
-        var numberOfDaysToSubtract = 1;
-        currentDate.setDate(currentDate.getDate() - numberOfDaysToSubtract);
+            /* Clear out the existing canvasTileData */
+            clearOutCanvasTileData();
 
-        /* Update the Dashboard Date and Canvas Tiles for new current Date */
-        updateDashboardDateAndCanvasTilesForGivenDate(currentDate);
-    });
+            /* Subtract one day from the current date */
+            var numberOfDaysToSubtract = 1;
+            currentDate.setDate(currentDate.getDate() - numberOfDaysToSubtract);
 
-    /* Click Handler for Next Date Arrow */
-    $("#nextDateArrow").on("click", function () {
+            /* Update the Dashboard Date and Canvas Tiles for new current Date */
+            updateDashboardDateAndCanvasTilesForGivenDate(currentDate);
+        });
 
-        /* Save the Canvas Tile Data for the given date */
-        saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
+        /* Click Handler for Next Date Arrow */
+        $("#nextDateArrow").on("click", function () {
 
-        /* Clear out the existing canvasTileData */
-        clearOutCanvasTileData();
+            /* Save the Canvas Tile Data for the given date */
+            saveCanvasTileDataForGivenDate(currentDate, canvasTileData);
 
-        /* Add one day to the current date */
-        var numberOfDaysToAdd = 1;
-        currentDate.setDate(currentDate.getDate() + numberOfDaysToAdd);
+            /* Clear out the existing canvasTileData */
+            clearOutCanvasTileData();
 
-        /* Update the Dashboard Date and Canvas Tiles for new current Date */
-        updateDashboardDateAndCanvasTilesForGivenDate(currentDate);
-    });
+            /* Add one day to the current date */
+            var numberOfDaysToAdd = 1;
+            currentDate.setDate(currentDate.getDate() + numberOfDaysToAdd);
+
+            /* Update the Dashboard Date and Canvas Tiles for new current Date */
+            updateDashboardDateAndCanvasTilesForGivenDate(currentDate);
+        });
+    }
 
     /* Clear out the existing canvasTileData */
     var clearOutCanvasTileData = function () {
@@ -965,6 +969,8 @@
 
     /* Update the Dashboard Date and Canvas Tiles for given Date */
     var updateDashboardDateAndCanvasTilesForGivenDate = function (currentDate) {
+        /* Initialize the Current Date Arrows */
+        initializeCurrentDateArrows();
 
         /* Update the Current Date on the Dashboard Header */
         updateCurrentDateOnDashboardHeader(currentDate);
