Commit #148: Change the focusout event with mouseout event

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -623,7 +623,7 @@
         });
 
         /* Focus Out Handler for Side Nav Panel */
-        $("#side-nav-panel").focusout(function () {
+        $("#side-nav-panel").mouseout(function () {
             toggleSideNavPanelVisibility();
         });
 
