Commit #149: Add Click Handler for all elements of the body except the Side Nav Panel and its children

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -622,9 +622,14 @@
             toggleSideNavPanelVisibility();
         });
 
-        /* Focus Out Handler for Side Nav Panel */
-        $("#side-nav-panel").mouseout(function () {
-            toggleSideNavPanelVisibility();
+        /* Click Handler for all elements of body except for the Side Nav Panel and its children */
+        $("body").on('click', ':not(#side-nav-panel)', ':not(.side-nav-group)', ':not(.side-nav-group-icon)', ':not(.side-nav-group-text)',
+            ':not(.side-nav-item)', ':not(.side-nav-item-inner-wrapper)', ':not(.side-nav-item-icon)', ':not(.side-nav-item-text)', ':not(.side-nav-group-header)',
+            function () {
+            var sidePanelVisible = $("#side-nav-panel:visible");
+            if (sidePanelVisible) {
+                toggleSideNavPanelVisibility();
+            }
         });
 
         /* Handler for Side Nav Item Div click event. Triggered whenever user clicks on the Side Nav Item Div. */
