Commit #152: Pass the event object to the document click event

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -632,7 +632,7 @@
         //    }
         //    });
 
-        $(document.body).click(function () {
+        $(document.body).click(function (event) {
             var sidePanelVisible = $("#side-nav-panel:visible");
             if (sidePanelVisible) {
                 toggleSideNavPanelVisibility();
