--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -636,7 +636,7 @@
             var eventId = event.target.id;
             var eventClass = event.target.class;
 
-            if (eventId.contains("side-nav") || eventClass.contains("side-nav")) {
+            if (eventId.includes("side-nav") || eventClass.includes("side-nav")) {
                 return;
             } else {
                 var sidePanelVisible = $("#side-nav-panel:visible");
