--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -636,7 +636,9 @@
             var eventId = event.target.id;
             var eventClass = event.target.class;
 
-            if ((eventId && eventClass) && (eventId.includes("side-nav") || eventClass.includes("side-nav"))) {
+            if (eventId && eventId.includes("side-nav") {
+                return;
+            } else if(eventClass && eventClass.includes("side-nav")){
                 return;
             } else {
                 var sidePanelVisible = $("#side-nav-panel:visible");
