--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -636,7 +636,7 @@
             var eventId = event.target.id;
             var eventClass = event.target.class;
 
-            if (eventId && eventId.includes("side-nav") {
+            if (eventId && eventId.includes("side-nav")) {
                 return;
             } else if(eventClass && eventClass.includes("side-nav")){
                 return;
