Commit #162: Pass the url directly instead of via the variable

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -1507,7 +1507,7 @@
         $.get(kbUrl, function (data) {
             alert( "Load was performed." );
         });
-        var jqxhr = $.get(kbUrl, function (data) {
+        var jqxhr = $.get("https://sleepy-citadel-45065.herokuapp.com/contacts/580b5f63a3dff911008d94f0", function (data) {
             alert("success");
         })
         .then(function (response) {
