Commit #164: Using kb-api internal url with CORS issue fixed

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -1503,7 +1503,7 @@
     /* Get data from KB for the given entity */
     var getDataFromKB = function () {
         // TODO: separate out into kbBaseUrl, entity, id
-        var kbUrl = "https://sleepy-citadel-45065.herokuapp.com/contacts/580b5f63a3dff911008d94f0";
+        var kbUrl = "https://protected-falls-61725.herokuapp.com/contacts";
         $.get(kbUrl, function (data) {
             alert( "Load was performed." );
         });
