--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -898,7 +898,17 @@
                 break;
             case "contacts":
                 /* Get data from KB for all contacts */
-                getDataFromKB();
+                getDataFromKB()
+                    .done(function (data) {
+                        console.log("getDataFromKB: success");
+                        // TODO: Inject Contacts content into the Page Content Div
+                    })
+                    .fail(function (error, status) {
+                        console.log("getDataFromKB: error");
+                    })
+                    .always(function () {
+                        console.log("getDataFromKB: complete");
+                    });
                 break;
         }
     }
@@ -1504,38 +1514,19 @@
     var getDataFromKB = function () {
         // TODO: separate out into kbBaseUrl, entity, id
         var kbUrl = "https://protected-falls-61725.herokuapp.com/contacts";
-        $.get(kbUrl, function (data) {
-            alert( "Load was performed." );
-        });
-        //var jqxhr = $.get("https://sleepy-citadel-45065.herokuapp.com/contacts/580b5f63a3dff911008d94f0", function (data) {
-        //    alert("success");
-        //})
-        //.then(function (response) {
-        //        return response;
-        //    }, function (response) {
-        //        alert("Error finding contacts.");
-        //    })
-        //.done(function (data) {
-        //    alert("second success");
-        //})
-        //.fail(function (error, status) {
-        //    alert("error");
-        //})
-        //.always(function () {
-        //    alert("finished");
+
+        var promise = $.ajax(kbUrl);
+          //.done(function (data) {
+          //    console.log("getDataFromKB: success");
+          //    return data;
+          //})
+          //.fail(function (error, status) {
+          //    console.log("getDataFromKB: error");
+          //})
+          //.always(function () {
+          //    console.log("getDataFromKB: complete");
         //});
-
-
-        var jqxhr = $.ajax(kbUrl)
-          .done(function (data) {
-              alert("success");
-          })
-          .fail(function (error, status) {
-              alert("error");
-          })
-          .always(function () {
-              alert("complete");
-          });
+        return promise;
     }
 
     /* Generic Utility Functions */
