--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -1307,8 +1307,10 @@
         {
             case COMMAND_INTERPRETATION_METHOD.Native:
                 nativeCommandInterpreter(command, agentContext);
+                break;
             default:
                 nativeCommandInterpreter(command, agentContext);
+                break;
         }
     }
 
