Commit #168: Return the result of the command interpreters

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -1306,10 +1306,10 @@
         switch (currentCommandInterpretationMethod)
         {
             case COMMAND_INTERPRETATION_METHOD.Native:
-                nativeCommandInterpreter(command, agentContext);
+                return nativeCommandInterpreter(command, agentContext);
                 break;
             default:
-                nativeCommandInterpreter(command, agentContext);
+                return nativeCommandInterpreter(command, agentContext);
                 break;
         }
     }
